remmina (1.0.0-3) UNRELEASED; urgency=low

  * debian/patches/desktop_file.patch:
    - Fix installation path of the desktop file.

 -- Luca Falavigna <dktrkranz@debian.org>  Sat, 25 Feb 2012 09:30:22 +0100

remmina (1.0.0-2) unstable; urgency=low

  * debian/patches/desktop_file.patch:
    - Restore installation of the .desktop file (Closes: #659542).
  * debian/patches/toolbar.patch:
    - Mark main toolbar as a primary toolbar (Closes: #659781).
  * debian/patches/datadir.patch:
    - Adjust location of REMMINA_DATADIR to allow install of icons
      in the correct location.
  * debian/control:
    - Improve description of the remmina-plugin-gnome package.
    - Bump Standards-Version to 3.9.3.
  * debian/copyright:
    - Format now points to copyright-format site.

 -- Luca Falavigna <dktrkranz@debian.org>  Sat, 25 Feb 2012 01:21:41 +0100

remmina (1.0.0-1) unstable; urgency=low

  * New upstream release.
    - Compatible with FreeRDP 1.0 (Closes: #658363).
    - Ported to GTK3, this also fixes an incompatibility with
      GTK2 and recent Avahi with GTK3 support, which lead to
      crashes when scanning network services (Closes: #626499).
  * debian/patches/libvncserver.patch:
    - Do not use convenience copy of libvncserver.
  * debian/patches/g_thread_init.patch:
    - Do not use deprecated g_thread_init function.
  * debian/patches/REMMINA_COMMAND_NONE.patch:
    - Removed, obsoleted by GApplication port.
  * debian/clean:
    - Remove spurious files created at build-time.
  * debian/compat:
    - Bump compatibility level to 9.
  * debian/control:
    - Refresh build-dependencies to match new structure.
    - Drop remmina-dev package, no longer used.
    - Build packages once provided by remmina-plugins.
    - Provide remmina-common package.
    - Provide remmina-plugin-gnome package.
  * debian/copyright:
    - Refresh copyright information.
  * debian/docs:
    - Documentation is no longer accurate, do not ship it anymore.