@@ -1,2 +1,2 @@
 usr/bin
-remmina/desktop/remmina.desktop	usr/share/applications
+usr/share/applications
