@@ -8,8 +8,9 @@ override_dh_auto_configure:
 
 override_dh_install:
 	dh_install
-	find $(CURDIR)/debian/remmina-common -name "*remmina.desktop" -delete
-	find $(CURDIR)/debian/remmina-common -type d -empty -delete
+	[ -d debian/remmina-common ] && \
+		find $(CURDIR)/debian/remmina-common -name "*remmina.desktop" -delete && \
+		find $(CURDIR)/debian/remmina-common -type d -empty -delete || true
 
 override_dh_makeshlibs:
 	for plugin in rdp vnc xdmcp nx telepathy; do \
