@@ -2,8 +2,11 @@ remmina (1.0.0-3) UNRELEASED; urgency=low
 
   * debian/patches/desktop_file.patch:
     - Fix installation path of the desktop file.
+  * debian/rules:
+    - Check for existence of remmina-common directory before trying
+      to access it, fix FTBFS.
 
- -- Luca Falavigna <dktrkranz@debian.org>  Sat, 25 Feb 2012 09:30:22 +0100
+ -- Luca Falavigna <dktrkranz@debian.org>  Sat, 25 Feb 2012 10:04:03 +0100
 
 remmina (1.0.0-2) unstable; urgency=low
 
